--- a/IE6_Firefox/userChrome.css
+++ b/IE6_Firefox/userChrome.css
@@ -359,10 +359,10 @@
 /* [!] Note: do not use OS titlebar with 'tabs not on top' code on macOS ************************/
 /* @import "./css/tabs/tabs_below_navigation_toolbar.css"; /**/ /* <-- tabs not on top - Fx60-64 - Windows/Linux */
 /* @import "./css/tabs/tabs_below_navigation_toolbar_macOS.css"; /**/ /* <-- tabs not on top - Fx60-64 - macOS */
-/* @import "./css/tabs/tabs_below_navigation_toolbar_fx65.css"; /**/ /* <-- tabs not on top - Fx65-67 - Windows/Linux */
+@import "./css/tabs/tabs_below_navigation_toolbar_fx65.css"; /**/ /* <-- tabs not on top - Fx65-67 - Windows/Linux */
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx65_macOS.css"; /**/ /* <-- tabs not on top - Fx65+ - macOS */
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx65_macOS_default_tabs.css"; /**/ /* <-- tabs not on top - Fx65+ - macOS - default tabs */
-@import "./css/tabs/tabs_below_navigation_toolbar_fx65_v2.css"; /**/ /* <-- tabs not on top - Fx65+ - Windows/Linux - only for multi-lined tabs support, causes glitches with disabled menubar */
+/* @import "./css/tabs/tabs_below_navigation_toolbar_fx65_v2.css"; /**/ /* <-- tabs not on top - Fx65+ - Windows/Linux - only for multi-lined tabs support, causes glitches with disabled menubar */
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx65_v2_force_hidden_menubar.css"; /**/ /* tabs not on top - Fx65+ - Windows/Linux - only for multi-lined tabs support - no menubar with OS titlebar */
 /* @import "./css/tabs/tabs_below_navigation_toolbar_fx68.css"; /**/ /* <-- tabs not on top - Fx68+ - Windows/Linux */
 /* - TABS BELOW MAIN CONTENT (tabs on bottom) - EXPERIMENTAL ************************************/
@@ -387,7 +387,7 @@
 
 /* TAB BACKGROUND COLORS for default/active/hovered/unloaded tabs and 'new tab' tab *************/
 /* edit target file to set own custom colors ****************************************************/
-@import "./config/custom_tab_color_settings.css"; /**/
+/* @import "./config/custom_tab_color_settings.css"; /**/
 /* TAB TEXT colors/shadow/weight/style for default/active/hovered/unloaded tabs *****************/
 /* edit target file to set own custom colors ****************************************************/
 /* @import "./config/custom_tab_text_settings.css"; /**/
