--- a/IE8_aero/chrome/tabs.css
+++ b/IE8_aero/chrome/tabs.css
@@ -10,12 +10,12 @@
 }
 
 .tab-background {
-    border: transparent !important;
-    border-radius: 5px 5px 0 0 !important;
+   border: transparent !important;
+   border-radius: 4px 4px 0 0 !important;
    border: 1px solid #adc5dd !important;
-    background: transparent;
-    color: transparent;
-    opacity: 0.0;
+   background: transparent;
+   color: transparent;
+   opacity: 0.0;
 }
 
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab, .tabbrowser-tab, .tab-stack
@@ -33,7 +33,7 @@
 
 .tab-content {
    box-shadow: inset 1px 1px #c3c8cf, inset -1px 0 #c3c8cf, inset 2px 2px #fff, inset -2px 0 #fff !important;
-   border-radius: 4px 4px 0 0 !important;
+   border-radius: 3px 5px 0 0 !important;
    background-image: linear-gradient(#cee4fc, #cee4fc) !important;
    /*background-image: linear-gradient(#fff, #b1b1b1, #d4d0c8) !important;*/
    /*box-shadow: inset 1px -3px 3px -4px #000 !important;*/
@@ -42,14 +42,14 @@
 
 .tab-content:hover {
    background: unset !important;
-   background-image: linear-gradient(#9fccdf, #9fccdf, transparent) !important;
+   background-image: linear-gradient(#cee4fc, #fff) !important;
    /*background-image: linear-gradient(#ffd3b8, #ffc5a2, transparent) !important;*/
 }
 
 .tab-content[selected="true"] {
    /*color: #fff !important;*/
    box-shadow: inset 1px 1px #c3c8cf, inset -1px 0 #c3c8cf, inset 2px 2px #fff, inset -2px 0 #fff !important;
-   border-radius: 4px 4px 0 0 !important;
+   border-radius: 3px 5px 0 0 !important;
    border: 1px 1px 0 1px solid #c3c8cf !important;
    background-image: linear-gradient(#cee4fc, #fff) !important;
    /*background-image: linear-gradient(#fff, #72a1cc, #8fdef2) !important;*/
@@ -63,7 +63,7 @@
 #tabs-newtab-button {
    color: transparent !important;
    box-shadow: inset 1px 1px #c3c8cf, inset -1px 0 #c3c8cf, inset 2px 2px #fff, inset -2px 0 #fff !important;
-   border-radius: 2px 4px 0 0 !important;
+   border-radius: 3px 5px 0 0 !important;
    background-image: linear-gradient(#cee4fc, #cee4fc) !important;
 }
 
