--- a/IE8_aero/chrome/toolbars.css
+++ b/IE8_aero/chrome/toolbars.css
@@ -1,18 +1,17 @@
 #nav-bar:not(:-moz-lwtheme) {
   background-color: #b4cee8 !important;
-  padding-top: 2px !important;
+  padding-top: 1px !important;
   background-position: left bottom;
   background-image: none !important;
-  box-shadow: 0px 1px 3px #44505f !important;
-  margin-bottom: 2px !important;
+  box-shadow: 0 1px 0 0 #e0e0e0 !important;
+  border-bottom: 1px solid #404040 !important;
+  margin-bottom: 0px !important;
 }
 
 toolbar:not(#TabsToolbar):not(#toolbar-menubar):not(#nav-bar):not(:-moz-lwtheme) {
-  /*border-top: 1px solid #adc5dd !important;
-  box-shadow: -2px 4px 2px -4px #000 inset !important;*/
   background-image: url("image/bottom.png") !important;
   background-color: inherit !important;
-  margin-bottom: -6px !important;
+  margin-bottom: -3px !important;
   background-image: none !important;
   background-image: linear-gradient(#FFF, #c3dcfa) !important;
   padding: 2px !important; }
@@ -21,13 +20,23 @@ toolbar:not(#TabsToolbar):not(#toolbar-menubar):not(#nav-bar):not(:-moz-lwtheme)
   margin-bottom: 0px !important;
 }
 
+#toolbar-menubar {
+  border: none !important;
+  -moz-appearance: none !important;
+  color: #000 !important; }
+
+#main-window[tabsintitlebar="true"] #toolbar-menubar {
+  border: none !important;
+  background-image: linear-gradient(#e3eefc,#b4cee8) !important;
+}
+
 /* TABS: on bottom */
 #navigator-toolbox toolbar:not(#nav-bar):not(#toolbar-menubar) {-moz-box-ordinal-group:10}
 #TabsToolbar {-moz-box-ordinal-group:1000!important}
 
 #TabsToolbar {
-  padding-top: 4px !important;
   padding-left: 4px !important;
+  padding-top: 3px !important;
   display: block !important;
   position: absolute !important;
   bottom: 1px !important;
@@ -36,6 +45,7 @@ toolbar:not(#TabsToolbar):not(#toolbar-menubar):not(#nav-bar):not(:-moz-lwtheme)
   background-color: #e3eefc !important;
   background-image: linear-gradient(#c3dcfa, #e3eefc) !important;
   max-height: 31px !important;
+  border-bottom: 1px solid #505050 !important;
 }
 
 #tabbrowser-tabs {
