--- a/IE8_aero/chrome/userChrome.css
+++ b/IE8_aero/chrome/userChrome.css
@@ -3,6 +3,7 @@
 @import "statusbar.css";
 @import "toolbars.css";
 @import "toolbar_icons.css";
+@import "titlebar_icons.css";
 @import "urlbar.css"; 
 
 #main-window {
