--- a/IE8_Luna/chrome/tabs.css
+++ b/IE8_Luna/chrome/tabs.css
@@ -13,38 +13,50 @@
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab[visuallyselected="true"],
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab, .tabbrowser-tab, .tab-content {
    border: unset !important;
+   box-shadow: unset !important;
 }
 
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab, .tabbrowser-tab,
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab[visuallyselected="true"] {
-   min-height: 26px !important;
-   max-height: 26px !important;
+   margin-left: 2px !important;
    padding: 0px !important;
-   border: 0px solid transparent !important;
-   border-right: 1px solid #fff !important;
-   box-shadow: inset -1px 0px #505050 !important;
+   border: 1px solid #505050 !important;
+   border-radius: 3px 3px 0 0 !important;
+   margin-bottom: 1px !important;
 }
 
 .tab-content {
    padding: 0px !important;
    padding-left: 8px !important;
    padding-right: 8px !important;
-   border: unset !important
-   /*background-image: linear-gradient(#ffc5c8, #d4d0c8) !important; */
+   border: none !important;
+   background-image: linear-gradient(to bottom, #faf9f4, #f1eee2) !important;
+   box-shadow: 0 -1px 2px #909090 inset !important;
+}
+
+
+#TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab[selected="true"] {
+   border: 1px solid #505050 !important;
+   border-top: 1px solid #e68b2c !important;
+   border-bottom: none !important;
+   border-radius: 3px 3px 0 0 !important;
+   background-image: linear-gradient(to bottom, shade(#DED9C2, 1.2),shade(#DED9C2, 1.1)) !important;
+   margin-bottom: 1px !important;
 }
 
 .tab-content:hover {
-   background-image: linear-gradient(#fac67e, #d4d0c8) !important;
+   box-shadow: 0 -1px 2px #909090 inset, 0 2px #71a3f5 inset !important;
 }
 
 .tab-content[selected="true"] {
+   margin-top: 0px !important;
+   box-shadow: 0 2px #ffc83c inset !important;
+   background-image: linear-gradient(to bottom, #fff, #fff) !important;
    /*color: #fff !important;*/
-   background-image: linear-gradient(#99bae2, #d4d0c8) !important;
 }
 
 .tab-content[selected="true"]:hover {
-   /*color: #fff !important;*/
-   background-image: linear-gradient(#9fccdf, #d4d0c8) !important;
+
 }
 
 /*
