--- a/IE8_Luna/chrome/toolbars.css
+++ b/IE8_Luna/chrome/toolbars.css
@@ -81,12 +81,14 @@ toolbar:not(#TabsToolbar):not(#toolbar-menubar):not(#nav-bar):not(:-moz-lwtheme)
   padding: 0px !important;
   padding-left: 2px !important;
   padding-bottom: 2px !important;
-  max-height: 27px !important;
-  min-height: 27px !important;
+  max-height: 32px !important;
+  min-height: 32px !important;
   background-image: url("image/toolbar.png") !important;
   background-size: 100% 100% !important; 
   padding: 1px !important;
-  padding-top: 0px !important;
+  padding-top: 4px !important;
+  border-bottom: 1px solid #505050 !important;
+  box-shadow: 0 3px #fff !important;
 }
 
 #tabbrowser-tabs {
