Updates for Luna IE8 theme, reduced tab height and changed toolbar buttons.

--- a/IE8_Luna/chrome/tabs.css
+++ b/IE8_Luna/chrome/tabs.css
@@ -18,10 +18,12 @@
 
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab, .tabbrowser-tab,
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab[visuallyselected="true"] {
+   min-height: 23px !important;
+   max-height: 23px !important;
    margin-left: 2px !important;
    padding: 0px !important;
-   border: 1px solid #505050 !important;
-   border-radius: 3px 3px 0 0 !important;
+   border: 1px solid #979174 !important;
+   border-radius: 2px 2px 0 0 !important;
    margin-bottom: 1px !important;
 }
 
@@ -31,25 +33,31 @@
    padding-right: 8px !important;
    border: none !important;
    background-image: linear-gradient(to bottom, #faf9f4, #f1eee2) !important;
-   box-shadow: 0 -1px 2px #909090 inset !important;
+   box-shadow: 0 -1px #979174 inset, 0 -2px #cbc6b1 inset !important;
 }
 
 
+#TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab {
+   margin-top: 3px !important;
+   min-height: 23px !important;
+   max-height: 23px !important;
+}
+
 #TabsToolbar:not(:-moz-lwtheme) .tabbrowser-tab[selected="true"] {
-   border: 1px solid #505050 !important;
+   border: 1px solid #979174 !important;
    border-top: 1px solid #e68b2c !important;
    border-bottom: none !important;
-   border-radius: 3px 3px 0 0 !important;
+   border-radius: 2px 2px 0 0 !important;
    background-image: linear-gradient(to bottom, shade(#DED9C2, 1.2),shade(#DED9C2, 1.1)) !important;
-   margin-bottom: 1px !important;
 }
 
 .tab-content:hover {
-   box-shadow: 0 -1px 2px #909090 inset, 0 2px #71a3f5 inset !important;
+   margin: 0px !important;
+   box-shadow: 0 -1px #979174 inset, 0 -2px #cbc6b1 inset, 0 2px #ffc83c inset !important;
 }
 
 .tab-content[selected="true"] {
-   margin-top: 0px !important;
+   margin: 0px !important;
    box-shadow: 0 2px #ffc83c inset !important;
    background-image: linear-gradient(to bottom, #fff, #fff) !important;
    /*color: #fff !important;*/
