--- a/IE8_Luna/chrome/toolbars.css
+++ b/IE8_Luna/chrome/toolbars.css
@@ -38,8 +38,8 @@ toolbar:not(#TabsToolbar):not(#toolbar-menubar):not(#nav-bar):not(:-moz-lwtheme)
   background-size: 100% 100% !important; 
   padding: 1px !important;
   padding-top: 2px !important;
-  border-bottom: 1px solid #fff !important;
-  box-shadow: 0 -1px #b7b197 inset !important; } 
+  border-bottom: 1px solid #b7b197 !important;
+  box-shadow: 0 1px #fff !important; } 
 
 #main-window[tabsintitlebar="true"] #toolbar-menubar {
   border: none !important;
